// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal should display send modal form 1`] = `
<actionmodal-stub
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <a
    id="edit-memo-btn"
  >
    
    Need to edit the memo field?
  
  </a>
</actionmodal-stub>
`;

exports[`SendModal validation should show address required error 1`] = `
<actionmodal-stub
  amount="2"
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
        value="2"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <a
    id="edit-memo-btn"
  >
    
    Need to edit the memo field?
  
  </a>
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address length is too long 1`] = `
<actionmodal-stub
  amount="2"
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="bech32"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
        value="2"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <a
    id="edit-memo-btn"
  >
    
    Need to edit the memo field?
  
  </a>
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address length is too short 1`] = `
<actionmodal-stub
  amount="2"
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdf"
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="bech32"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
        value="2"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <a
    id="edit-memo-btn"
  >
    
    Need to edit the memo field?
  
  </a>
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when alphanumeric is wrong 1`] = `
<actionmodal-stub
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <tmformmsg-stub
      msg=""
      name="Amount"
      type="required"
    />
  </tmformgroup-stub>
   
  <a
    id="edit-memo-btn"
  >
    
    Need to edit the memo field?
  
  </a>
</actionmodal-stub>
`;
